# LDSO

./: .gitignore  CMakeLists.txt  make_project.sh
Results/1/: results.txt  results.txt.noloop
Results/ORB PI/1/: CameraTrajectory.txt  KeyFrameTrajectory.txt  pointcloud.txt  ref_pointcloud.txt
Results/ORB PI/2/: CameraTrajectory.txt  KeyFrameTrajectory.txt  pointcloud.txt  ref_pointcloud.txt
examples/: CMakeLists.txt  cam_test.py  live_mono_slam.cc
examples/EUROC/: brio_640_480.yaml  live.txt  live_brio_640_480.txt
include/internal/OptimizationBackend/: MatrixAccumulators.h
